# QtOSG-hello

./: CMakeLists.txt  main.cpp
